Guard against an empty response when adding Applications

One would expect to always have at least one action here, namely the launch
action corresponding to the Exec entry. But we have a crash where it looks like
that we got an empty list, guarding against that does no harm.
BUG:431508